# cuda-mpi-scratch

./: .gitignore  .nfs0000000001272e070000053f  0_0  0_1  1_0  1_1  CMakeLists.txt  README  a.out  host_allocator.h  job_4_1_1_a.out_  mpi-complex-types.cpp  mpi1.cpp  mpi10.cpp  mpi11-2d-stencil-subarray.cpp  mpi11-subarray.cpp  mpi12-2d-stencil-subarray-cuda.cu  mpi12-subarray-cuda.cpp  mpi12-subarray-cuda.cu  mpi2.cpp  mpi3.cpp  mpi4.cpp  mpi5.cpp  mpi6.cpp  mpi7.cpp  mpi8.cpp  mpi9.cpp  mpi_cuda_pbs_ref.sh  mpi_pbs_sample.sh  mpicuda2.cpp  mpicuda2.cu  mpicuda3.cu  mpicuda4.cu  mpierr.h  ref_parallel-dot-product-atomics.cu  stencil2D.h
sample-output/: 0_0  0_1  0_2  1_0  1_1  2_1  job_9_1_1_cuda-2d-stencil-subarray_
stencil2d/: CMakeLists.txt  README  README.md  mpi-2d-stencil-subarray-cuda.cu  mpi-2d-stencil-subarray.cpp  stencil2D.h
stencil2d/sample-output/: 1_2  2_0  2_2  job_9_1_1_a.out_
test-benchmark/: mpi-pingpong-gpu-async.cpp  mpi-pingpong-gpu.cpp
